# api_sensitive_scan

./: Cargo.toml  README.md
resources/: api_dict.txt  user-agents.txt
src/: main.rs
src/function/: config.rs  error.rs  mod.rs  report.rs  scanner.rs  vulnerability.rs
