[package]
name = "api_scan"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11.0"
reqwest = {version = "0.12.19",features = ["json","stream"]}
anyhow = "1.0"         
tokio = { version = "1", features = ["full"] }
structopt = "0.3"      
thiserror = "2.0.12"     
regex = "1"           
indicatif = "0.17"    
chrono = "0.4"         
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"     
futures = "0.3"       
base64 = "0.22.1"       
fs = "0.0.5"

